--- a/02_el_protocolo_http.ipynb
+++ b/02_el_protocolo_http.ipynb
@@ -140,9 +140,9 @@
    "source": [
     "## El paquete ```requests```.\n",
     "\n",
-    "El paquete [```requests```](https://requests.kennethreitz.org/en/master/)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo *HTTP*, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
+    "El paquete [```requests```](https://requests.kennethreitz.org/en/master/)  permite iniciar una sesión con un servidor web, mediante funciones que emulan los métodos del protocolo *HTTP*, regresando un objeto de tipo ```requests.models.Response```.\n",
     "\n",
-    "El paquete *requests* presenta funcionalidades avanzadas como autenticación, conexiones seguras, manejo de 'cookies', etc. "
+    "El paquete ```requests``` presenta funcionalidades avanzadas como autenticación, conexiones seguras, manejo de 'cookies', etc. "
    ]
   },
   {
@@ -172,8 +172,13 @@
     "El paquete ```requests``` contiene varias funciones que pueden enviar peticiones a una *URL* utilizando un método en particular de la siguiente manera:\n",
     "\n",
     "```\n",
-    "requests.<funcion de método>('<URL>', <argumentos>)\n",
+    "<funcion de método>('<URL>', <argumento 1>, <argumento 2>, ... , <argumento n>)\n",
     "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<URL>``` es la *URL* de in recurso por el cual se hará la petición.\n",
+    "* ```<argumento n>``` es un argumento que se aplicará a la petición.\n",
     "\n",
     "Estas funciones pueden ser:\n",
     "\n",
@@ -188,6 +193,19 @@
     "* ```requests.trace()```, la cual accederá a una *URL* utilizando el método ```TRACE```.\n",
     "\n",
     "Del mismo modo, al recibir la respuesta del servidor, la función regresará a un objeto de tipo ```requests.models.Response```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Argumentos de las funciones de métodos.\n",
+    "\n",
+    "* ```params```\n",
+    "* ```header```\n",
+    "* ```data```\n",
+    "* ```json```\n",
+    "* ```auth```"
    ]
   },
   {
@@ -228,32 +246,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase ```requests.models.Response```."
+    "## Atributos y métodos de los objetos ```requests.models.Response```.\n",
+    "\n",
+    "Los objetos de tipo ```requests.models.Response``` contienen varios atributos y métodos que permiten acceder a diversos datos de la respuesta obtenida a partir de uan petición."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Principales atributos de los objetos de tipo ```requests.models.Response```.\n",
+    "### Atributos.\n",
     "\n",
-    "* ```headers```\n",
-    "* ```status_code```\n",
-    "* ```reason```\n",
-    "* ```url```\n",
-    "* ```content```\n",
-    "* ```encoding```\n",
-    "* ```text```"
+    "* El atributo ```headers```, el cual es un objeto de tipo ```dict``` conteniendo los atributos del encabezado de la respuesta del servidor. Cada clave del objeto corresponde al identificador de un atributo y los valores correspondientes a la calve siempre son objetos de tipo ```str```. Algunas de dichas claves son:\n",
+    "    * La clave ```'Date'```, el cual contiene la fecha y hora en la que se envió la respuesta.\n",
+    "    * La clave ```'Server'```, el cual contiene la descripción del servidor.\n",
+    "    * La clave ```'Last-Modified'```, el cual contiene la fecha de la última modificación del recurso.\n",
+    "    * La clave ```'Content-Encoding'```, el cual contiene la codificación del contenido.\n",
+    "    * La clave ```'Content-Length'```, el cual contiene el tamaño en bytes del contenido.\n",
+    "    * La clave ```'Content-Type'```, el cual describe el [tipo MIME](https://developer.mozilla.org/es/docs/Web/HTTP/Basics_of_HTTP/MIME_types#Tipos_MIME_importantes_para_desarrolladores_Web) del contenido.\n",
+    "\n",
+    "* El atributo ```status_code```, el cual corresponde al número de código de estado que regresa el servidor.\n",
+    "* El atributo ```reason```, el cual es un objeto de tipo```str``` con un mensaje relacionado al código de estado.\n",
+    "* El atributo ```url```, el cual es un objeto de tipo ```str``` que contiene a la *URL* a la que se le hizo la peitción.\n",
+    "* El atributo ```content```, el cual es un objeto de tipo ```bytes``` con los datos enviados por el servidor.\n",
+    "* El atributo ```encoding```, el cual es un objeto de tipo ```str``` que describe la codificación usada por el servidor.\n",
+    "* El atributo ```text```, el cual es un objeto de tipo ```str``` que contiene una representación del contenido, en caso de que el tipo de contenido sea texto."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Principales métodos de los objetos de tipo ```requests.models.Response```.\n",
+    "### Métodos.\n",
     "\n",
-    "* ```close()```\n",
-    "* ```json()```"
+    "* El método ```close()```. Este método cierra la sesión entre el cliente y el servidor.\n",
+    "* El método ```json()``` puede convertir en un objeto tipo ```dict``` al contenido de una respuesta cuando el atributo ```Content Type``` sea de tipo ```'application/json'```. "
    ]
   },
   {
@@ -267,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Los encabezados de la petición contenidos en el atributo ```sitios.headers```."
+    "* La siguiente celda deplegará el contenido del atributo ```sitios.headers```."
    ]
   },
   {
@@ -284,7 +311,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* La siguiente celda deplegará el contenido de la clave ```'Content-Type'``` del atributo ```sitios.headers```."
+   ]
   },
   {
    "cell_type": "code",
@@ -299,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El código de estado resultante contenido en el atributo ```sitio.status_code```."
+    "* La siguiente celda deplegará el contenido del atributo ```sitio.status_code```."
    ]
   },
   {
@@ -316,7 +345,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* La siguiente celda deplegará el contenido del atributo ```sitio.reason```."
+   ]
   },
   {
    "cell_type": "code",
@@ -331,13 +362,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El contenido de la respuesta contenido en el atributo ```sitio.content```."
+    "* La siguiente celda deplegará el contenido del atributo ```sitio.content```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* La siguiente celda deplegará el contenido del atributo ```sitio.url```."
+   ]
   },
   {
    "cell_type": "code",
@@ -349,21 +382,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "sitio.content"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará codificación de la respuesta."
+    "* La siguiente celda deplegará el contenido del atributo ```sitio.encoding```."
    ]
   },
   {
@@ -379,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El texto de la respuesta contenido en el atributo ```sitio.text```. "
+    "* La siguiente celda deplegará el contenido del atributo ```sitio.text```."
    ]
   },
   {
@@ -394,37 +416,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HTML(sitio.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HTML(str(sitio.content, encoding=\"UTF-8\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se cerrará la conexión mediante el método ```sitio.close()```."
+    "* La siguiente celda cerrará la sesión mediante el método ```sitio.close()```."
    ]
   },
   {
@@ -440,9 +435,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Uso de la declaración ```with``` para objetos ```requests.models.Response```.\n",
+    "\n",
+    "En vista de que los objetos instanciado de ```requests.models.Response``` cuentan con un método ```close()``` es posible utilizar la declaración ```with```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Ejemplo:**\n",
     "\n",
-    "Se utilizará la función ```requests.get()``` para acceder a http://pythonista.mx para abir una conexión enviando una petición ```GET```. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
+    "Se utilizará la función ```requests.get()``` para acceder a la *URL* https://pythonista.io  enviando una petición con el método ```GET```. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
     "\n",
     "* El mensaje de estado resultante.\n",
     "* Los encabezados del mensaje de respuesta."
@@ -456,7 +460,7 @@
    },
    "outputs": [],
    "source": [
-    "with requests.get(\"http://pythonista.mx\") as sitio:\n",
+    "with requests.get(\"http://pythonista.io\") as sitio:\n",
     "    print(sitio.status_code)\n",
     "    print(sitio.headers)"
    ]
@@ -467,7 +471,7 @@
    "source": [
     "## Ejemplos prácticos para el uso de *HTTP*.\n",
     "\n",
-    "El sitio https://httpbin.org/ incluye ejemplos ilustrativos de los posibles usos del protocolo *HTTP*."
+    "El sitio https://httpbin.org/ ofrece un servicio web que permite experimentar con diveras peticiones *HTTP* de forma segura."
    ]
   },
   {
@@ -476,7 +480,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se utilizará ```requests.get()``` para obtener un recurso que corresponde a una imagen https://httpbin.org/image/png."
+    "* Se utilizará ```requests.get()``` para obtener un recurso que corresponde a una imagen loacalizada en la *URL* https://httpbin.org/image/png."
    ]
   },
   {
@@ -492,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará el contenido bruto que fue enviado como respuesta."
+    "* La siguiente celda desplegará el contenido en formato de bytes que fue enviado como respuesta."
    ]
   },
   {
@@ -528,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La clave ```'Content-Type'``` del objeto ```resultado.headers``` indica que el contenido corresponde a una imagen en formato *png*."
+    "* La clave ```'Content-Type'``` del atributo ```resultado.headers``` indica que el contenido corresponde a una imagen en formato *png*."
    ]
   },
   {
@@ -544,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para desplegar una imagen se utilziará el módulo ```IPython.Display.Image``` de *IPython*."
+    "* Para desplegar una imagen se utilizará el módulo ```IPython.Display.Image``` de *IPython*."
    ]
   },
   {
@@ -563,6 +567,13 @@
    "outputs": [],
    "source": [
     "Image(resultado.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A continuación se cerrará la sesión."
    ]
   },
   {
@@ -635,11 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Gestión de respuestas con cotenido en formato *JSON*.\n",
-    "\n",
-    "* El objeto ```respuesta``` contiene al método ```json()```, el cual regresa un objeto tipo ```dict``` con información obtenida de una respuesta enviada en *JSON*.\n",
-    "\n",
-    "* Las"
+    "* En vista de que el atrubito ```Content-Type``` del objeto respuesta es ```'application/json'```, es posible ejecutar el método ```respuesta.json()``` el cual regresará un objeto de tipo ```dict``` al que s ele dará el nombre ```respuesta_json```."
    ]
   },
   {
@@ -703,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
