--- a/03_configuracion_de_un_proyecto.ipynb
+++ b/03_configuracion_de_un_proyecto.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## El script ```settings.py```.\n",
     "\n",
-    "La configuración básica de un proyecto de *Django* se encuentra en un script de Python llamado ```settings.py```. \n",
+    "La configuración básica de un proyecto de *Django* se encuentra en un script de Python llamado ```settings.py```, el cual también puede ser importado como un módulo.\n",
     "\n",
     "La documentación de la configuración de *Django* puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/settings\n",
     "\n",
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se importará al archivo ```tutorial/tutorial/settings.py```."
+    "* A continuación se importará al archivo ```tutorial/tutorial/settings.py``` como un módulo."
    ]
   },
   {
@@ -84,35 +84,6 @@
    "outputs": [],
    "source": [
     "from tutorial.tutorial import settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.DEBUG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "dir(settings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.INSTALLED_APPS"
    ]
   },
   {
@@ -339,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
