--- a/11_configuracion_de_bases_de_datos.ipynb
+++ b/11_configuracion_de_bases_de_datos.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql mysql+mysqlconnector://root:0p3n5t4ckCDMX@localhost"
+    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
    ]
   },
   {
