--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -29,7 +29,6 @@
     "Las plantillas que incluyen código basado en el *DTL* puede realizar las siguientes operaciones.\n",
     "\n",
     "* Acceder a los objetos ingresados en un contexto de forma similar a como Python accede al espacio de nombres del ámbito global.\n",
-    "* Acceder a atributos y métodos de los objetos.\n",
     "* Ejecutar expresiones utilizando de filtros.\n",
     "* Delimitar bloques.\n",
     "* Ejecutar declaraciones condicionales.\n",
@@ -326,7 +325,7 @@
     "\n",
     "Dentro de la apliación *api* se crearán 2 nuevas reglas de URL, cuyas funciones de vista regresarán una plantilla.\n",
     "\n",
-    "El archivo *src/18/urls.py contiene lo siguiente:\n",
+    "El archivo ```src/18/urls.py``` contiene lo siguiente:\n",
     "\n",
     "```python\n",
     "from django.urls import path, re_path\n",
@@ -341,15 +340,22 @@
     "```\n",
     "Definiendo las URLs:\n",
     "\n",
-    "* *api/vista/*, ligada a la función *template_views.vista()*.\n",
-    "* *api/valida/*, ligada a la función *template_views.valida()*."
+    "* ```api/vista/```, ligada a la función ```template_views.vista()``.\n",
+    "* ```api/valida/```, ligada a la función ```template_views.valida()```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo *tutorial/api/urls.py* con el archivo *src/19/urls.py*."
+    "* La siguiente celda sustituirá al archivo ```tutorial/api/urls.py``` con el archivo ```src/18/urls.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas GNU/Linux y MacOS X."
    ]
   },
   {
@@ -358,7 +364,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/19/urls.py tutorial/api/urls.py"
+    "!cp src/18/urls.py tutorial/api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\18\\urls.py tutorial\\api\\urls.py"
    ]
   },
   {
@@ -376,9 +398,9 @@
    "source": [
     "### Definición de funciones de vista.\n",
     "\n",
-    "El archivo *tutorial/api/urls.py* hace referencia al módulo *template_views* en el que se encuentran definidas las funciones *vista()* y *valida()*.\n",
+    "El archivo ```tutorial/api/urls.py``` hace referencia al módulo ```template_views``` en el que se encuentran definidas las funciones ```vista()``` y ```valida()```.\n",
     "\n",
-    "El archivo *src/19/template_views.py* contiene el siguiente código que define a las funciones en cuestión.\n",
+    "El archivo ```src/18/template_views.py``` contiene el siguiente código que define a las funciones en cuestión.\n",
     "\n",
     "``` python\n",
     "from .models import Alumno\n",
@@ -395,15 +417,15 @@
     "    return render_to_response('valida.html',{'lista': lista}) \n",
     "```\n",
     "\n",
-    "* La función *vista()* hace lo siguiente:\n",
-    "    * Trae a todas las instancias del modelo *api.models.Alumno* de la base de datos.\n",
-    "    * Crea un objeto tipo *list* con nombre *lista* el cual contiene de pares correspondientes a un campo y el atributo correspondiente de cada objeto instanciados de *api.models.Alumno*.\n",
-    "    * Despliega la plantilla *listado.html* enviando los datos de *lista* con el identificador *lista*. \n",
+    "* La función ```vista()``` hace lo siguiente:\n",
+    "    * Trae a todas las instancias del modelo ```api.models.Alumno``` de la base de datos.\n",
+    "    * Crea un objeto tipo ```list``` con nombre ```lista``` el cual contiene de pares correspondientes a un campo y el atributo correspondiente de cada objeto instanciados de ```api.models.Alumno```.\n",
+    "    * Despliega la plantilla ```listado.html``` enviando los datos de ```lista``` con el identificador ``lista``. \n",
     "    \n",
-    "* La función *valida()* hace lo siguiente:\n",
-    "    * Trae a todas las instancias del modelo *api.models.Alumno* de la base de datos.\n",
-    "    * Crea un objeto tipo *list* con nombre *lista* el cual contiene a su vez un listado de los atributos correspondientes de cada objeto instanciados de *api.models.Alumno*.\n",
-    "    * Despliega la plantilla *valida.html* enviando los datos de *lista* con el identificador *lista*. "
+    "* La función ```valida()``` hace lo siguiente:\n",
+    "    * Trae a todas las instancias del modelo ````api.models.Alumno``` de la base de datos.\n",
+    "    * Crea un objeto tipo ```list``` con nombre ```lista``` el cual contiene a su vez un listado de los atributos correspondientes de cada objeto instanciados de ```api.models.Alumno```.\n",
+    "    * Despliega la plantilla ```valida.html``` enviando los datos de ```lista``` con el identificador ```lista```. "
    ]
   },
   {
@@ -419,7 +441,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/19/template_views.py tutorial/api/template_views.py"
+    "!cp src/18/template_views.py tutorial/api/template_views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\18\\template_views.py tutorial\\api\\template_views.py"
    ]
   },
   {
@@ -439,11 +470,11 @@
    "source": [
     "### Definición de plantillas.\n",
     "\n",
-    "#### La plantilla base.\n",
+    "#### La plantilla ```base.html```.\n",
     "\n",
-    "Esta plantilla define el bloque *encabezado* y el bloque *cuerpo* y será usada como base para extender a las siguientes plantillas.\n",
+    "Esta plantilla define el bloque ```encabezado``` y el bloque ```cuerpo``` y será usada como base para extender a las siguientes plantillas.\n",
     "\n",
-    "El archivo *src/19/base.html* es una plantilla que contiene lo siguiente:\n",
+    "El archivo ```src/18/base.html``` es una plantilla que contiene lo siguiente:\n",
     "\n",
     "```html\n",
     "<!DOCTYPE html>\n",
@@ -469,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se creará el directorio *tutorial/templates/*."
+    "* La siguiente celda copiará al archivo ```src/18/base.html``` en el directorio ```tutorial/templates/```."
    ]
   },
   {
@@ -478,14 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir tutorial/templates/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda copiará al archivo *src/19/base.html* en el directorio *tutorial/templates/*."
+    "!cp src/18/base.html tutorial/templates/"
    ]
   },
   {
@@ -494,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/19/base.html tutorial/templates/"
+    "!copy src\\18\\base.html tutorial\\templates\\"
    ]
   },
   {
@@ -510,13 +534,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La plantilla *src/19/listado.html* contiene el siguiente código:\n",
+    "#### La plantilla ```listado.html```.\n",
+    "La plantilla ```src/18/listado.html``` contiene el siguiente código:\n",
     "\n",
     "```html\n",
     "{% extends \"base.html\" %}\n",
     "{% block encabezado %}Listado de alumnos{% endblock %}\n",
     "{% block cuerpo %}\n",
-    "    <h1> Listado de alumnos</h1>.\n",
+    "    <h1> Listado de alumnos.</h1>\n",
     "    {% for registro in lista %}\n",
     "        <p/>\n",
     "        <ul>\n",
@@ -528,15 +553,22 @@
     "{% endblock %}\n",
     "```\n",
     "\n",
-    "* Esta plantilla hereda a la plantilla *base.html*.\n",
-    "* Sustituye los contenidos de los bloques *encabezado* y *cuerpo*."
+    "* Esta plantilla hereda a la plantilla ```base.html```.\n",
+    "* Sustituye los contenidos de los bloques ```encabezado``` y ```cuerpo```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda copiará al archivo *src/19/listado.html* en el directorio *tutorial/templates/*."
+    "* La siguiente celda copiará al archivo ```src/18/listado.html``` en el directorio ```tutorial/templates/```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas GNU/Linux y MacOS X."
    ]
   },
   {
@@ -545,7 +577,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/19/listado.html tutorial/templates/"
+    "!cp src/18/listado.html tutorial/templates/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\18\\listado.html tutorial\\templates\\"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La siguiente celda mostrará los cambios al archivo ```tutorial/templates/```."
    ]
   },
   {
@@ -556,14 +611,16 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/templates/listado.html"
+    "%pycat tutorial/templates/listado.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La plantilla *valida.html* contiene el siguiente código:\n",
+    "#### La plantilla ```valida.html```.\n",
+    "\n",
+    "La plantilla ```valida.html``` contiene el siguiente código:\n",
     "\n",
     "```html\n",
     "{% extends \"base.html\" %}\n",
@@ -592,15 +649,15 @@
     "{% endblock %}\n",
     "```\n",
     "\n",
-    "* Esta plantilla hereda a la plantilla *base.html*.\n",
-    "* Sustituye los contenidos de los bloques *encabezado* y *cuerpo*."
+    "* Esta plantilla hereda a la plantilla ```base.html```.\n",
+    "* Sustituye los contenidos de los bloques ```encabezado``` y ```cuerpo```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda copiará al archivo *src/19/valida.html* en el directorio *tutorial/templates/*."
+    "* La siguiente celda copiará al archivo ```src/18/valida.html``` en el directorio ```tutorial/templates/```."
    ]
   },
   {
@@ -609,7 +666,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/19/valida.html tutorial/templates/"
+    "!cp src/18/valida.html tutorial/templates/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\18\\valida.html tutorial\\templates\\"
    ]
   },
   {
@@ -620,7 +686,7 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/templates/valida.html"
+    "%pycat tutorial\\templates\\valida.html"
    ]
   },
   {
