--- a/19_contenido_estatico.ipynb
+++ b/19_contenido_estatico.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "## Contenido estático en función del tipo de entorno.\n",
     "\n",
-    "*Django* es un servidor de aplicaciones web que permirte crear contenido de forma dinámica. Utilizarlo como un servidor web dedicado como lo son el servidor [*Apache*](https://httpd.apache.org/) y [*Nginx*](https://nginx.org) no sólo es ineficiente, sino que incluso podría representar un riesgo de seguridad.\n",
+    "*Django* es un servidor de aplicaciones web que permite crear contenido de forma dinámica. Utilizarlo como un servidor web dedicado como lo son el servidor [*Apache*](https://httpd.apache.org/) y [*Nginx*](https://nginx.org) no sólo es ineficiente, sino que incluso podría representar un riesgo de seguridad.\n",
     "\n",
     "Es posible consultar un pequeño tutorial sobre cómo publicar contenido estático desde un servidor web dedicado en https://docs.djangoproject.com/en/2.2/howto/static-files/deployment/#serving-static-files-from-a-dedicated-server."
    ]
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La aplicación *django.contrib.staticfiles*.\n",
+    "## La aplicación ```django.contrib.staticfiles```.\n",
     "\n",
     "Esta es una de las aplicaciones que viene por defecto con *Django* y es la que permite identificar, recolectar y guardar contendido estático."
    ]
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La instrucción *manage.py collectstatic*.\n",
+    "## La instrucción ```manage.py collectstatic```.\n",
     "\n",
     "Esta instrucción ejecutada en el directorio del proyecto, recolectará los archivos estáticos de las aplicaciones y los guardará en el directorio indicado en la configuración.\n",
     "\n",
@@ -116,11 +116,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tratamiento de los recursos estáticos con la variable *settings.DEBUG*.\n",
+    "## Tratamiento de los recursos estáticos con la variable ```settings.DEBUG```.\n",
     "\n",
-    "La variable *settings.DEBUG* define el comportamiento de *Django* en varios aspectos, incluyendo la forma en la que guarda los recursos estáticos.\n",
+    "La variable ```settings.DEBUG``` define el comportamiento de *Django* en varios aspectos, incluyendo la forma en la que guarda los recursos estáticos.\n",
     "\n",
-    "Cuando el valor de *settings.DEBUG* es *True*, Django buscará automáticamente en el subdirectorio *static/* de cada aplicación en el proyecto y no es necesario tener un directorio único de dfindo por *settings.STATIC_ROOT*."
+    "Cuando el valor de ```settings.DEBUG``` es ```True```, Django buscará automáticamente en el subdirectorio ```static/``` de cada aplicación en el proyecto y no es necesario tener un directorio único de dfindo por ```settings.STATIC_ROOT```."
    ]
   },
   {
@@ -129,18 +129,18 @@
    "source": [
     "## Configuración de los recursos estáticos.\n",
     "\n",
-    "El archivo *settings.py* de un proyecto de *Django* permite definir ciertas variables para el manejo de archivos estáticos.\n",
+    "El archivo ```settings.py``` de un proyecto de *Django* permite definir ciertas variables para el manejo de archivos estáticos.\n",
     "\n",
-    "La referencia de estas variables puede ser consultada  en https://docs.djangoproject.com/en/2.1/ref/settings/#static-files."
+    "La referencia de estas variables puede ser consultada  en https://docs.djangoproject.com/en/2.2/ref/settings/#static-files."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La variable *settings.STATIC_URL*.\n",
+    "### La variable ```settings.STATIC_URL```.\n",
     "\n",
-    "Esta variable indica la URL del servidor local que estará siriviendo el contenido estático. Por defecto el valor de la variable es *'/static/'*.\n",
+    "Esta variable indica la *URL* del servidor local que estará siriviendo el contenido estático. Por defecto el valor de la variable es ```'/static/'```.\n",
     "\n",
     "Es importante que *Django* cuente con las credenciales y permisos para acceder a los recursos de esta URL."
    ]
@@ -149,33 +149,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La variable *settings.STATIC_ROOT*.\n",
+    "### La variable ```settings.STATIC_ROOT```.\n",
     "\n",
-    "Esta variable indica la localización de los contenidos estáticos, la variable *settings.STATIC_ROOT* define la ruta completa del directorio donde se encontrarán los recursos estáticos recolectados mediante la instrucción *manage.py collectstatic* .\n",
+    "Esta variable indica la localización de los contenidos estáticos, la variable ```settings.STATIC_ROOT``` define la ruta completa del directorio donde se encontrarán los recursos estáticos recolectados mediante la instrucción ```manage.py collectstatic```.\n",
     "\n",
-    "Si el valor de *settings.DEBUG* es *True*, *Django* no consultará este directorio.\n",
+    "Si el valor de ```settings.DEBUG``` es ```True```, *Django* no consultará este directorio.\n",
     "\n",
-    "Este directorio es al que debe de apuntar el servidor web para la URL definida por *settings.STATIC_URL*."
+    "Este directorio es al que debe de apuntar el servidor web para la URL definida por ```settings.STATIC_URL```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La variable *settings.STATICFILES_DIRS*.\n",
+    "### La variable ```settings.STATICFILES_DIRS```.\n",
     "\n",
-    "Esta variable contiene una lista de posibles rutas en las que se podría encontrar contenido estático al ejecutar la instrucción *manage.py collectstatic*."
+    "Esta variable contiene una lista de posibles rutas en las que se podría encontrar contenido estático al ejecutar la instrucción ```manage.py collectstatic```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La variable *settings.STATICFILES_STORAGE*.\n",
+    "### La variable ```settings.STATICFILES_STORAGE```.\n",
     "\n",
-    "Es común que al desplegar servicios en la nube se utilicen recursos de almscenamiento tales como [S3 de AWS](https://aws.amazon.com/es/s3/). \n",
+    "Es común que al desplegar servicios en la nube se utilicen recursos de almacenamiento tales como [S3 de AWS](https://aws.amazon.com/es/s3/). \n",
     "\n",
-    "La variable *settings.STATICFILES_STORAGE* permite definir el recurso en la nube en el cual se almacenará el contenido estático.\n",
+    "La variable ```settings.STATICFILES_STORAGE``` permite definir el recurso en la nube en el cual se almacenará el contenido estático.\n",
     "\n",
     "Es posible consultar un pequeño ejemplo de conexiones de almacenamiento para contenido estártico en https://docs.djangoproject.com/en/2.2/howto/static-files/deployment/#staticfiles-from-cdn."
    ]
@@ -184,16 +184,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La variable *STATICFILES_FINDERS*.\n",
+    "### La variable ```STATICFILES_FINDERS```.\n",
     "\n",
     "Esta variable define una lista de las herramientas de *Django* que son capaces de buscar contenido estático.\n",
     "\n",
-    "Las herramientas predefinidas en una instalación de Django so:\n",
+    "Las herramientas predefinidas en una instalación de Django son:\n",
     "\n",
-    "* *'django.contrib.staticfiles.finders.FileSystemFinder'*.\n",
-    "* *'django.contrib.staticfiles.finders.AppDirectoriesFinder'*.\n",
+    "* ```'django.contrib.staticfiles.finders.FileSystemFinder'```.\n",
+    "* ```'django.contrib.staticfiles.finders.AppDirectoriesFinder'```.\n",
     "\n",
-    "En caso de que se defina una ubicación en la nube para guardar el contenido estático mediante *settings.STATICFILES_STORAGE*, es necesario añadir *'django.contrib.staticfiles.finders.DefaultStorageFinder'*. \n",
+    "En caso de que se defina una ubicación en la nube para guardar el contenido estático mediante ```settings.STATICFILES_STORAGE```, es necesario añadir ```'django.contrib.staticfiles.finders.DefaultStorageFinder'```. \n",
     "\n"
    ]
   },
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo *src/20/settings.py* contiene en su configuración las siguientes variables definidas:\n",
+    "El archivo ```src/19/settings.py``` contiene en su configuración las siguientes variables definidas:\n",
     "    \n",
     "``` python\n",
     "DEBUG = True\n",
@@ -217,14 +217,14 @@
     "STATICFILES_FINDERS = ['django.contrib.staticfiles.finders.FileSystemFinder',\n",
     "'django.contrib.staticfiles.finders.AppDirectoriesFinder',]\n",
     "```\n",
-    "En vista de que la variable *DEBUG* tiene el valor de *True*, *Django* buscará en el directorio  */static/* de cada aplicación en el proyecto *tutorial*."
+    "En vista de que la variable ```DEBUG``` tiene el valor de ```True```, *Django* buscará en el directorio  ```/static/``` de cada aplicación en el proyecto ```tutorial```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá el archivo *tutorial/tutorial/settings.py* con el archivo *src/20/settings.py*."
+    "* A continuación se sustituirá el archivo ```tutorial/tutorial/settings.py``` con el archivo ```src/19/settings.py```."
    ]
   },
   {
@@ -233,14 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/settings.py tutorial/tutorial/settings.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Se importará el archivo *src/20/settings.py* como un módulo*."
+    "!cp src/19/settings.py tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -249,14 +242,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tutorial.tutorial import settings as settings"
+    "!copy src\\19\\settings.py tutorial\\tutorial\\settings.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial/tutorial/settings.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El componente *'django.contrib.staticfiles'* se encuentra listado en *settings.INSTALLED_APPS*."
+    "* Se importará el archivo ```tutorial/tutorial/settings.py``` como un módulo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tutorial.tutorial import settings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El componente ```'django.contrib.staticfiles'``` se encuentra listado en ```settings.INSTALLED_APPS```."
    ]
   },
   {
@@ -281,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aún cuando la configuración de *settings.DEBUG* indica que *Django* ignorará el contenido en *STATIC_ROOT*, se ejecutará la instrucción *manage.py collectstatic* con fines ilustrativos."
+    "Aún cuando la configuración de ```settings.DEBUG``` indica que *Django* ignorará el contenido en ```STATIC_ROOT```, se ejecutará la instrucción ```manage.py collectstatic``` con fines ilustrativos."
    ]
   },
   {
@@ -297,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La variable *settings.STATIC_ROOT* está configurada para usar la ruta completa del directorio *tutorial/staric*."
+    "La variable ```settings.STATIC_ROOT``` está configurada para usar la ruta completa del directorio ```tutorial/static```."
    ]
   },
   {
@@ -326,7 +344,7 @@
    },
    "outputs": [],
    "source": [
-    "!./manage.py collectstatic --noinput"
+    "!python manage.py collectstatic --noinput"
    ]
   },
   {
@@ -339,23 +357,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd .."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Contenido estáticos en plantillas de *Django*.\n",
     "\n",
-    "### La declaración *load*.\n",
+    "### La declaración ```{% load % }```.\n",
     "\n",
-    "La declaración *load* es usada por el *DTL* para cargar bibliotecas de etiquetas.\n",
+    "La declaración ```{% load % }``` es usada por el *DTL* para cargar bibliotecas de etiquetas.\n",
     "\n",
     "```\n",
     "{% load <biblioteca> %}\n",
@@ -366,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Carga de la biblioteca *static*.\n",
+    "### Carga de la biblioteca ```static```.\n",
     "\n",
     "La biblioteca *static* hace referencia al contenido estático al que puede acceder *Django* mediante *django.contrib.staticfiles*.\n",
     "```\n",
@@ -387,7 +396,7 @@
     "{% static \"<ruta del archivo>\" %}\n",
     "```\n",
     "\n",
-    "* En donde *ruta del archivo* es la ruta dentro del directorio static en la que se encuentra el recurso."
+    "* En donde ```<ruta del archivo>``` es la ruta dentro del directorio static en la que se encuentra el recurso."
    ]
   },
   {
@@ -402,14 +411,21 @@
     "\n",
     "Aún cuando esta biblioteca puede ser referida mediante un *CDN* (por las siglas en inglés de red de contenido en línea), también es posible ponerla a disposición como contenido estático.\n",
     "\n",
-    "Los directorios *src/20/css* y *src/20/js* contienen los archivos de la biblioteca de *Bootstrap*."
+    "Los directorios ```src/19/css``` y ```src/19/js``` contienen los archivos de la biblioteca de *Bootstrap*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se copiarán los directorios *src/20/css* y *src/20/js* al directorio estático de la aplicación *api*."
+    "* Se copiarán los directorios ```src/19/css``` y ```src/19/js``` al directorio estático de la aplicación ```api``."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para GNU/Linux y MacOS X."
    ]
   },
   {
@@ -418,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%mkdir tutorial/api/static"
+    "!mkdir tutorial/api/static"
    ]
   },
   {
@@ -427,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%mkdir tutorial/api/static/css"
+    "!cp -r src/19/css tutorial/api/static/"
    ]
   },
   {
@@ -436,7 +452,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp -r src/20/css tutorial/api/static/"
+    "!cp -r src/19/js tutorial/api/static/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para Windows."
    ]
   },
   {
@@ -445,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%ls tutorial/api/static/css/"
+    "!mkdir tutorial\\api\\static"
    ]
   },
   {
@@ -454,18 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp -r src/20/js tutorial/api/static/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "%ls tutorial/api/static/js/"
+    "!copy src\\19\\css tutorial\\api\\static\\"
    ]
   },
   {
@@ -474,9 +486,9 @@
    "source": [
     "### Inclusión  de un directorio de imágenes en el directorio estático.\n",
     "\n",
-    "El directorio *src/20/imagenes* contiene a la imagen *pythonista.png*.\n",
+    "El directorio ```src/19/imagenes``` contiene a la imagen ```pythonista.png```.\n",
     "\n",
-    "* A continuación se copiará el directorio *src/20/imagenes* al directorio estático de la aplicación *api*."
+    "* A continuación se copiará el directorio *``src/19/imagenes``` al directorio estático de la aplicación ```api``."
    ]
   },
   {
@@ -485,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp -r src/20/imagenes tutorial/api/static/"
+    "!cp -r src/19/imagenes tutorial/api/static/"
    ]
   },
   {
@@ -503,7 +515,7 @@
    "source": [
     "### La plantilla *base.html*.\n",
     "\n",
-    "La plantilla localizada en *src/20/base.html* contiene el siguiente código en el que se carga la biblioteca *static* y se hace referencia a *boostrap.min.css* y a la imagen *pythonista.png*.\n",
+    "La plantilla localizada en ```src/19/base.html``` contiene el siguiente código en el que se carga la biblioteca ```static``` y se hace referencia a *boostrap.min.css* y a la imagen ```pythonista.png```.\n",
     "\n",
     "``` html\n",
     "{% load static %} \n",
@@ -543,7 +555,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/20/base.html tutorial/templates/"
+    "!cp src/19/base.html tutorial/templates/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy ..\\src\\19\\base.html ..\\tutorial\\templates\\"
    ]
   },
   {
@@ -554,7 +584,7 @@
    },
    "outputs": [],
    "source": [
-    "%pycat tutorial/templates/base.html"
+    "%pycat ../tutorial/templates/base.html"
    ]
   },
   {
@@ -629,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
